Implementação de carregamento dinâmico com jquery

--- a/CloneNetflix/index.html
+++ b/CloneNetflix/index.html
@@ -25,432 +25,43 @@
 
     <main>
         <div id="inicio" class="principal">
-            <div class="container">
-                <h3 class="titulo"> Giant Bombcast </h3>
-                <small class="autorPodcast"> Giant Bomb </small>
+            <div id="mainPodcast" class="container">
+                <h3 id="titulo"> Giant Bombcast </h3>
+                <small id="autorPodcast"> Giant Bomb </small>
                 <div id="descricaoImagem">
                     <p class="descricao"> Giant Bomb discusses the latest video game news and new releases, taste-test questionable beverages, and get wildly off-topic in this weekly podcast, and to give you what you need when it comes to the world of video games, new and old. Fire up a Quick Look, sit back, and enjoy, friends.</p>
-                    <div class="imagemPodCast"></div>
+                    <div id="imagemPodCast"></div>
                 </div>
                 <button role="button" class="button"> <i class="fa-solid fa-play"></i> Ouvir Agora</button>
                 <button role="button" class="button"> <i class="fa-solid fa-circle-info"></i> Informações </button>
             </div>
         </div>
     </main>
-
-    <section id="recomendados" id="recomendados">
+    
+    <section id="recomendados" name="recomendados">
         <h4 class ="sectionTitulo"> Recomendados </h4>
-        <div class="owl-carousel owl-theme">
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/AllIn.jpg"/>
-                    <p>
-                        All-In
-                        <br />
-                        <small> Jason, Sacks & Friedberg</small>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/MindeSetMentor.jpg"/>
-                    <p>
-                        The Mindset Mentor 
-                        <br />
-                        <small>Rob Dial and Kast Media</small>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/reinventar.png"/>
-                    <p>
-                        Reinventar, ressignificar, recomeçar.
-                        <br />
-                        <small>Sodexo</small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/Jornada.jpg"/>
-                    <p>
-                        Jornada da Calma
-                        <br />
-                        <small>Helena Galante</small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/autoconciente.png"/>
-                    <p>
-                        Autoconsciente
-                        <br />
-                        <small>B9, Regina Giannetti</small>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/DarknetDiaries.jpg"/>
-                    <p>
-                        Darknet Diaries
-                        <br />
-                        <small> Jack Rhysider </small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/Gaana.jpg"/>
-                    <p>
-                        Gaana Music
-                        <br />
-                        <small>Urna Choudhary</small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/LexFridman.jpg"/>
-                    <p>
-                        Lex Fridman Podcast
-                        <br />
-                        <small>Lex Fridman</small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/MakeMeSmart.png"/>
-                    <p>
-                        Make Me Smart
-                        <br />
-                        <small>Marketplace</small>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/mustari.jpg"/>
-                    <p>
-                        free fire
-                        <br />
-                        <small>Mustari</small>
-                    </p>                
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/Pivotjpg.jpg"/>
-                    <p>
-                        Pivot
-                        <br />
-                        <small>New York Magazine</small>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/Talks.png"/>
-                    <p>
-                        Mayo Clinic Talks
-                        <br />
-                        <small> Mayo Clinic </small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/Ausculta.jpg"/>
-                    <p>
-                        Ausculta Aqui
-                        <br />
-                        <small>SanarFlix</small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/jaleco.png"/>
-                    <p>
-                        De papo com Jaleco
-                        <br />
-                        <small>Bryan Porphirio</small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/ReplyAll.jpg"/>
-                    <p>
-                        Reply All
-                        <br />
-                        <small> Gimlet</small>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/TechStuff.jpg"/>
-                    <p>
-                        TechStuff 
-                        <br />
-                        <small>iHeartPodcasts</small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">                
-                <div class="owlItemTemplate">
-                    <img src="Assets/TheDailyjpg.jpg"/>
-                    <p>
-                        The Daily
-                        <br />
-                        <small>The New York Times</small>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/thisAmericamLife.png"/>
-                    <p>
-                        This American Life
-                        <br />
-                        <small>This American Life</small>
-                    </p>
-
-                </div>
-            </div>
+        <div id="recomendadosCarousel" class="owl-carousel owl-theme">
         </div>
         <hr />
     </section>
 
     <section id="negocios" name="negocios">
         <h4 class ="sectionTitulo"> Negócios </h4>
-        <div class="owl-carousel owl-theme">
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/AllIn.jpg"/>
-                    <p>
-                        All-In
-                        <br />
-                        <small> Jason, Sacks & Friedberg</small>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/PlanetMonkey.png"/>
-                    <p>
-                        Planet Money
-                        <br />
-                        <small>NPR</small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/MakeMeSmart.png"/>
-                    <p>
-                        Make Me Smart
-                        <br />
-                        <small>Marketplace</small>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/TheIndicator.png"/>
-                    <p>
-                        The Indicator
-                        <br />
-                        <small>NPR</small>
-                    </p>                
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/MindeSetMentor.jpg"/>
-                    <p>
-                        The Mindset Mentor 
-                        <br />
-                        <small>Rob Dial and Kast Media</small>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/theRamsey.jpg"/>
-                    <p>
-                        The Ramsey Show
-                        <br />
-                        <small> Ramsey Network </small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/onPurpose.jpg"/>
-                    <p>
-                        On Purpose 
-                        <br />
-                        <small>Jay Shetty</small>
-                    </p>
-
-                </div>
-            </div>
+        <div id="negociosCarousel" class="owl-carousel owl-theme">
         </div>
         <hr />
     </section>
 
     <section id="saude" name="saude">
         <h4 class ="sectionTitulo"> Saúde </h4>
-        <div class="owl-carousel owl-theme">
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/estilosaudavel.jpg"/>
-                    <p>
-                        ESTILO SAUDÁVEL
-                        <br />
-                        <small> joanina procida</small>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/DozeCast.jpg"/>
-                    <p>
-                        DozeCast - Cardiologia 
-                        <br />
-                        <small>Doze Por Oito</small>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/Talks.png"/>
-                    <p>
-                        Mayo Clinic Talks
-                        <br />
-                        <small> Mayo Clinic </small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/Ausculta.jpg"/>
-                    <p>
-                        Ausculta Aqui
-                        <br />
-                        <small>SanarFlix</small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/jaleco.png"/>
-                    <p>
-                        De papo com Jaleco
-                        <br />
-                        <small>Bryan Porphirio</small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/hackmed.jpg"/>
-                    <p>
-                        Hackmed Podcast
-                        <br />
-                        <small>Hackmed Podcast</small>
-                    </p>
-                </div>
-            </div>
+        <div id="saudeCarousel" class="owl-carousel owl-theme">
         </div>
         <hr />
     </section>
 
     <section id="autoconhecimento" name="autoconhecimento">
         <h4 class ="sectionTitulo"> Autoconhecimento </h4>
-        <div class="owl-carousel owl-theme">
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/zencast.jpg"/>
-                    <p>
-                        Zencast
-                        <br />
-                        <small> Zenklub</small>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/MeuInconsciente.png"/>
-                    <p>
-                        Meu Inconsciente Coletivo
-                        <br />
-                        <small>Folha de S. Paulo</small>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/toconciente.jpg"/>
-                    <p>
-                        Autoconsciência
-                        <br />
-                        <small>Isabel Vesco</small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/reinventar.png"/>
-                    <p>
-                        Reinventar, ressignificar, recomeçar.
-                        <br />
-                        <small>Sodexo</small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/Jornada.jpg"/>
-                    <p>
-                        Jornada da Calma
-                        <br />
-                        <small>Helena Galante</small>
-                    </p>
-
-                </div>
-            </div>
-            <div class="item">
-                <div class="owlItemTemplate">
-                    <img src="Assets/autoconciente.png"/>
-                    <p>
-                        Autoconsciente
-                        <br />
-                        <small>B9, Regina Giannetti</small>
-                    </p>
-                </div>
-            </div>
+        <div id="autoconhecimentoCrousel" class="owl-carousel owl-theme">
         </div>
         <hr />
     </section>
